# dreams-svr

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
prisma/: backup.sql  dreams.db  dreams.db-journal  schema.prisma
prisma/migrations/20230607160210_init/: migration.sql
prisma/migrations/20230608033346_init/: migration.sql
prisma/migrations/20230608164118_init/: migration.sql
prisma/migrations/20230609063435_dreams/: migration.sql
prisma/migrations/20230609131943_dreams/: migration.sql
prisma/migrations/20230613091138_dreams/: migration.sql
src/: app.html  app.postcss
src-tauri/: Cargo.toml  dreams.db  tauri.conf.json
src-tauri/doc/: README.md  backup.sql
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: api_message.rs  functions.rs  lib.rs  module.rs  prelude.rs  scenario.rs
src-tauri/migration/src/: lib.rs  m20220101_module.rs  m20220102_functions.rs  m20220103_scenario.rs  m20220104_apimessage.rs
src-tauri/src/: db.rs  main.rs
src/lib/: helper.ts  scenario.ts  stores.ts
src/lib/components/: ApiMessageList.svelte  ApiMessageListItem.svelte  ApiMessageSave.svelte  ApiMessageTable.svelte  ChartView.svelte  MessageWarpper.svelte  ParameterBlockTwins.svelte  ParameterList.svelte
src/lib/echarts/: echarts.min.js
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/[moduleId]/: +layout.server.ts  +layout.svelte
src/routes/[moduleId]/[funcId]/: +layout.server.ts
src/routes/[moduleId]/[funcId]/api/: +page.svelte  (+1 more)
src/routes/[moduleId]/save/: +server.ts
(+4 files in other folders)
